<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:paddingBottom="10dp"
              android:paddingTop="10dp">

    <TextView
            android:id="@+id/itemOrder_station_T"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/history_station"
            android:textColor="#000000"
            android:textSize="14dp" />

    <TextView
            android:id="@+id/itemOrder_tagid_T"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/history_tagid"
            android:textColor="#000000"
            android:textSize="14dp" />

    <TextView
            android:id="@+id/itemOrder_items_T"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/history_items"
            android:textColor="#000000"
            android:textSize="14dp" />

    <TextView
            android:id="@+id/itemOrder_status_T"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/history_status"
            android:textColor="#000000"
            android:textSize="14dp" />
</LinearLayout>