<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#f5f5f5"
              android:clickable="true"
              android:focusable="true"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#ffffff">

        <ImageView
                android:id="@+id/order_back_Img"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:padding="11dp"
                android:src="@drawable/nav_back_btn" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/bind_history"
                android:textColor="#1a1a1a"
                android:textSize="19dp" />

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/history_station"
                android:textColor="#000000"
                android:textSize="14dp" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/history_tagid"
                android:textColor="#000000"
                android:textSize="14dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/history_items"
                android:textColor="#000000"
                android:textSize="14dp" />

        <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/history_status"
                android:textColor="#000000"
                android:textSize="14dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff" />

</LinearLayout>