<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#22999999"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/menu_my_setip"
            android:layout_width="match_parent"
            android:layout_height="35dp">

        <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/wode_szip_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:text="@string/my_setip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/menu_my_modify"
            android:layout_width="match_parent"
            android:layout_height="35dp">

        <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/wode_xgmm_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:text="@string/my_repwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/menu_my_lan"
            android:layout_width="match_parent"
            android:layout_height="35dp">

        <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/wode_yyyy_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:text="@string/my_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/menu_my_channel"
            android:layout_width="match_parent"
            android:layout_height="35dp">

        <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/wode_msqh_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:text="@string/my_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/menu_my_ip"
            android:layout_width="match_parent"
            android:layout_height="35dp">

        <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:text="@string/my_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"/>

    <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


</LinearLayout>