<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/login_root_LL"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff"
              android:clickable="true"
              android:orientation="vertical">

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="#1a1a1a"
            android:textSize="19dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingTop="19dp">

            <TextView
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/login_id"
                    android:textColor="#666666"
                    android:textSize="14dp" />

            <EditText
                    android:id="@+id/login_id_E"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:text=""
                    android:textColor="#1a1a1a"
                    android:textSize="14dp" />


        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cccccc" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingTop="19dp">

            <TextView
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/login_username"
                    android:textColor="#666666"
                    android:textSize="14dp" />

            <EditText
                    android:id="@+id/login_username_E"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:text=""
                    android:textColor="#1a1a1a"
                    android:textSize="14dp" />


        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cccccc" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingTop="19dp">

            <TextView
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/login_password"
                    android:textColor="#666666"
                    android:textSize="14dp" />

            <EditText
                    android:id="@+id/login_password_E"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="#1a1a1a"
                    android:textSize="14dp" />

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cccccc" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/login_tip"
                android:textColor="#0874af"
                android:textSize="13dp" />

        <RelativeLayout
                android:id="@+id/login_commit_RL"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_disabled">

            <TextView
                    android:id="@+id/login_commit_T"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login_commit"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />

            <ProgressBar
                    android:id="@+id/login_commit_Pro"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/login_commit_T"
                    android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp"
            android:paddingLeft="115dp"
            android:paddingRight="115dp">

        <Button
                android:id="@+id/login_set_B"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_enabled_0874af"
                android:text="@string/login_set"
                android:textColor="#ffffff"
                android:textSize="12dp" />
    </RelativeLayout>
</LinearLayout>
